# WattVibe

./: .gitignore  README.md  pyproject.toml
src/power_indicator_light/: color_control.py  control_status.py  main.py  mock_color_control.py  mock_power_tracker.py  power_tracker.py  web_ui.py
src/power_indicator_light/templates/: index.html
src/wattvibe/templates/: index.html
