[project]
name = "wattvibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.1.1",
    "colour-science>=0.4.7",
    "dirigera>=1.2.6",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "pydantic-settings>=2.13.1",
    "scipy>=1.17.1",
]

[project.scripts]
start-wattvibe = "wattvibe.main:start"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
